# Tictactoe

./: CMakeLists.txt  README.md
Src/: chessboard.c  chessboard.h  main.c  piece.c  piece.h  player.c  player.h  queue.h  tictactoe.c
include/: tictactoe.h
lib/queue/: queue.c
